exports[`invalid(1): .button { color: red !important; color: revert; } .button:hover { color: blue; } 1`] = `

  1 | .button { color: red !important; color: revert; } .button:hover { color: blue; }

`;

exports[`invalid(1): .button { color: red !important; color: revert; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; color: revert; } .button:hover { color: blue; }
    |                                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(1): .button { color: red !important; } .button[disabled] { color: gray; } 1`] = `

  1 | .button { color: red !important; } .button[disabled] { color: gray; }

`;

exports[`invalid(1): .button { color: red !important; } .button[disabled] { color: gray; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button[disabled] { color: gray; }
    |                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(1): .button { color: red !important; }\n.button:hover { color: blue; } 1`] = `

  1 | .button { color: red !important; }
  2 | .button:hover { color: blue; }

`;

exports[`invalid(1): .button { color: red !important; }\n.button:hover { color: blue; } 2`] = `

Message:
  1 | .button { color: red !important; }
> 2 | .button:hover { color: blue; }
    |                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(1): .button { margin-top: 0 !important; margin: revert-layer; } .button:hover { margin-top: 1px; } 1`] = `

  1 | .button { margin-top: 0 !important; margin: revert-layer; } .button:hover { margin-top: 1px; }

`;

exports[`invalid(1): .button { margin-top: 0 !important; margin: revert-layer; } .button:hover { margin-top: 1px; } 2`] = `

Message:
> 1 | .button { margin-top: 0 !important; margin: revert-layer; } .button:hover { margin-top: 1px; }
    |                                                                             ^^^^^^^^^^^^^^^ \`margin-top\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(1): .button, .link { color: red !important; &:hover { color: blue; } } 1`] = `

  1 | .button, .link { color: red !important; &:hover { color: blue; } }

`;

exports[`invalid(1): .button, .link { color: red !important; &:hover { color: blue; } } 2`] = `

Message:
> 1 | .button, .link { color: red !important; &:hover { color: blue; } }
    |                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(1): .button.active { color: red !important; } .active.button:hover { color: blue; } 1`] = `

  1 | .button.active { color: red !important; } .active.button:hover { color: blue; }

`;

exports[`invalid(1): .button.active { color: red !important; } .active.button:hover { color: blue; } 2`] = `

Message:
> 1 | .button.active { color: red !important; } .active.button:hover { color: blue; }
    |                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(1): .button.is-loading { color: red !important; } .button.is-loading.is-disabled:hover { color: gray; } 1`] = `

  1 | .button.is-loading { color: red !important; } .button.is-loading.is-disabled:hover { color: gray; }

`;

exports[`invalid(1): .button.is-loading { color: red !important; } .button.is-loading.is-disabled:hover { color: gray; } 2`] = `

Message:
> 1 | .button.is-loading { color: red !important; } .button.is-loading.is-disabled:hover { color: gray; }
    |                                                                                      ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(1): .button[data-state=open] { color: red !important; } .button[data-state=\"open\"]:hover { color: blue; } 1`] = `

  1 | .button[data-state=open] { color: red !important; } .button[data-state="open"]:hover { color: blue; }

`;

exports[`invalid(1): .button[data-state=open] { color: red !important; } .button[data-state=\"open\"]:hover { color: blue; } 2`] = `

Message:
> 1 | .button[data-state=open] { color: red !important; } .button[data-state="open"]:hover { color: blue; }
    |                                                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(10): .\\62 utton { color: red !important; } .button:hover { color: blue; } 1`] = `

  1 | .\\62 utton { color: red !important; } .button:hover { color: blue; }

`;

exports[`invalid(10): .\\62 utton { color: red !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .\\62 utton { color: red !important; } .button:hover { color: blue; }
    |                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(10): .button, .link { color: red; @layer states { &:hover { color: blue; } } } 1`] = `

  1 | .button, .link { color: red; @layer states { &:hover { color: blue; } } }

`;

exports[`invalid(10): .button, .link { color: red; @layer states { &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .button, .link { color: red; @layer states { &:hover { color: blue; } } }
    |                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(10): .button:hover { color: red !important; } .link[disabled] { color: red !important; } .button:hover:focus, .link[disabled].active { color: blue; } 1`] = `

  1 | .button:hover { color: red !important; } .link[disabled] { color: red !important; } .button:hover:focus, .link[disabled].active { color: blue; }

`;

exports[`invalid(10): .button:hover { color: red !important; } .link[disabled] { color: red !important; } .button:hover:focus, .link[disabled].active { color: blue; } 2`] = `

Message:
> 1 | .button:hover { color: red !important; } .link[disabled] { color: red !important; } .button:hover:focus, .link[disabled].active { color: blue; }
    |                                                                                                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(10): @layer base { .button { color: red !important; } } .button[disabled] { color: gray !important; } 1`] = `

  1 | @layer base { .button { color: red !important; } } .button[disabled] { color: gray !important; }

`;

exports[`invalid(10): @layer base { .button { color: red !important; } } .button[disabled] { color: gray !important; } 2`] = `

Message:
> 1 | @layer base { .button { color: red !important; } } .button[disabled] { color: gray !important; }
    |                                                                        ^^^^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because layered important declarations take precedence over unlayered important declarations.

`;

exports[`invalid(10): @layer components { .button.active { color: red !important; } } .active.button:hover { color: blue !important; } 1`] = `

  1 | @layer components { .button.active { color: red !important; } } .active.button:hover { color: blue !important; }

`;

exports[`invalid(10): @layer components { .button.active { color: red !important; } } .active.button:hover { color: blue !important; } 2`] = `

Message:
> 1 | @layer components { .button.active { color: red !important; } } .active.button:hover { color: blue !important; }
    |                                                                                        ^^^^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because layered important declarations take precedence over unlayered important declarations.

`;

exports[`invalid(10): @media screen { @supports (display: grid) { .button { color: red !important; } } } @supports (display: grid) { @media screen { .button:hover { color: blue; } } } 1`] = `

  1 | @media screen { @supports (display: grid) { .button { color: red !important; } } } @supports (display: grid) { @media screen { .button:hover { color: blue; } } }

`;

exports[`invalid(10): @media screen { @supports (display: grid) { .button { color: red !important; } } } @supports (display: grid) { @media screen { .button:hover { color: blue; } } } 2`] = `

Message:
> 1 | @media screen { @supports (display: grid) { .button { color: red !important; } } } @supports (display: grid) { @media screen { .button:hover { color: blue; } } }
    |                                                                                                                                                ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(11): #\\62 utton { color: red !important; } #button:hover { color: blue; } 1`] = `

  1 | #\\62 utton { color: red !important; } #button:hover { color: blue; }

`;

exports[`invalid(11): #\\62 utton { color: red !important; } #button:hover { color: blue; } 2`] = `

Message:
> 1 | #\\62 utton { color: red !important; } #button:hover { color: blue; }
    |                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(11): .\\62 utton { COLOR: red !important; } .button[\\64 isabled] { color: gray; } 1`] = `

  1 | .\\62 utton { COLOR: red !important; } .button[\\64 isabled] { color: gray; }

`;

exports[`invalid(11): .\\62 utton { COLOR: red !important; } .button[\\64 isabled] { color: gray; } 2`] = `

Message:
> 1 | .\\62 utton { COLOR: red !important; } .button[\\64 isabled] { color: gray; }
    |                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(11): .button { all: revert-layer; --color: red !important; } .button:hover { --color: blue; } 1`] = `

  1 | .button { all: revert-layer; --color: red !important; } .button:hover { --color: blue; }

`;

exports[`invalid(11): .button { all: revert-layer; --color: red !important; } .button:hover { --color: blue; } 2`] = `

Message:
> 1 | .button { all: revert-layer; --color: red !important; } .button:hover { --color: blue; }
    |                                                                         ^^^^^^^^^^^^^ \`--color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(11): .button.active { color: red !important; } .active.button { &:hover { color: blue; } } 1`] = `

  1 | .button.active { color: red !important; } .active.button { &:hover { color: blue; } }

`;

exports[`invalid(11): .button.active { color: red !important; } .active.button { &:hover { color: blue; } } 2`] = `

Message:
> 1 | .button.active { color: red !important; } .active.button { &:hover { color: blue; } }
    |                                                                      ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(11): @container box (width > 1px) { @container style(--dark: 1) { .box { color: red !important; } } } @container style(--dark: 1) { @container box (width > 1px) { .box:hover { color: blue; } } } 1`] = `

  1 | @container box (width > 1px) { @container style(--dark: 1) { .box { color: red !important; } } } @container style(--dark: 1) { @container box (width > 1px) { .box:hover { color: blue; } } }

`;

exports[`invalid(11): @container box (width > 1px) { @container style(--dark: 1) { .box { color: red !important; } } } @container style(--dark: 1) { @container box (width > 1px) { .box:hover { color: blue; } } } 2`] = `

Message:
> 1 | @container box (width > 1px) { @container style(--dark: 1) { .box { color: red !important; } } } @container style(--dark: 1) { @container box (width > 1px) { .box:hover { color: blue; } } }
    |                                                                                                                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(11): @layer components { .button, .link { color: red !important; } } .button, .link { &:hover { color: blue !important; } } 1`] = `

  1 | @layer components { .button, .link { color: red !important; } } .button, .link { &:hover { color: blue !important; } }

`;

exports[`invalid(11): @layer components { .button, .link { color: red !important; } } .button, .link { &:hover { color: blue !important; } } 2`] = `

Message:
> 1 | @layer components { .button, .link { color: red !important; } } .button, .link { &:hover { color: blue !important; } }
    |                                                                                            ^^^^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because layered important declarations take precedence over unlayered important declarations.

`;

exports[`invalid(12): .\\62 utton, .link { COLOR: red !important; &:\\68 over { color: blue; } } 1`] = `

  1 | .\\62 utton, .link { COLOR: red !important; &:\\68 over { color: blue; } }

`;

exports[`invalid(12): .\\62 utton, .link { COLOR: red !important; &:\\68 over { color: blue; } } 2`] = `

Message:
> 1 | .\\62 utton, .link { COLOR: red !important; &:\\68 over { color: blue; } }
    |                                                         ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(12): .button { all: revert !important; direction: rtl !important; } .button:hover { direction: ltr; } 1`] = `

  1 | .button { all: revert !important; direction: rtl !important; } .button:hover { direction: ltr; }

`;

exports[`invalid(12): .button { all: revert !important; direction: rtl !important; } .button:hover { direction: ltr; } 2`] = `

Message:
> 1 | .button { all: revert !important; direction: rtl !important; } .button:hover { direction: ltr; }
    |                                                                                ^^^^^^^^^^^^^^ \`direction\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(12): .button { color: red !important; } .button[/* state */ aria-disabled=\"TRUE\" i] { color: gray; } 1`] = `

  1 | .button { color: red !important; } .button[/* state */ aria-disabled="TRUE" i] { color: gray; }

`;

exports[`invalid(12): .button { color: red !important; } .button[/* state */ aria-disabled=\"TRUE\" i] { color: gray; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button[/* state */ aria-disabled="TRUE" i] { color: gray; }
    |                                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(12): .toolbar { .button.active { color: red !important; } } .toolbar .active.button:hover { color: blue; } 1`] = `

  1 | .toolbar { .button.active { color: red !important; } } .toolbar .active.button:hover { color: blue; }

`;

exports[`invalid(12): .toolbar { .button.active { color: red !important; } } .toolbar .active.button:hover { color: blue; } 2`] = `

Message:
> 1 | .toolbar { .button.active { color: red !important; } } .toolbar .active.button:hover { color: blue; }
    |                                                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(12): @media screen { @media screen { .button { color: red !important; } } } @supports (display: grid) { @media screen { .button { color: blue; } } } 1`] = `

  1 | @media screen { @media screen { .button { color: red !important; } } } @supports (display: grid) { @media screen { .button { color: blue; } } }

`;

exports[`invalid(12): @media screen { @media screen { .button { color: red !important; } } } @supports (display: grid) { @media screen { .button { color: blue; } } } 2`] = `

Message:
> 1 | @media screen { @media screen { .button { color: red !important; } } } @supports (display: grid) { @media screen { .button { color: blue; } } }
    |                                                                                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(12): \\61 { color: red !important; } a:hover { color: blue; } 1`] = `

  1 | \\61 { color: red !important; } a:hover { color: blue; }

`;

exports[`invalid(12): \\61 { color: red !important; } a:hover { color: blue; } 2`] = `

Message:
> 1 | \\61 { color: red !important; } a:hover { color: blue; }
    |                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(13): .\\62 utton.active { COLOR: red !important; } .active.button:HOVER { color: blue; } 1`] = `

  1 | .\\62 utton.active { COLOR: red !important; } .active.button:HOVER { color: blue; }

`;

exports[`invalid(13): .\\62 utton.active { COLOR: red !important; } .active.button:HOVER { color: blue; } 2`] = `

Message:
> 1 | .\\62 utton.active { COLOR: red !important; } .active.button:HOVER { color: blue; }
    |                                                                     ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(13): .button { --color: red !important; } .button:hover { --color: blue; } 1`] = `

  1 | .button { --color: red !important; } .button:hover { --color: blue; }

`;

exports[`invalid(13): .button { --color: red !important; } .button:hover { --color: blue; } 2`] = `

Message:
> 1 | .button { --color: red !important; } .button:hover { --color: blue; }
    |                                                      ^^^^^^^^^^^^^ \`--color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(13): .button { ALL: revert-layer; \\75 nicode-bidi: isolate !important; } .button:hover { unicode-bidi: normal; } 1`] = `

  1 | .button { ALL: revert-layer; \\75 nicode-bidi: isolate !important; } .button:hover { unicode-bidi: normal; }

`;

exports[`invalid(13): .button { ALL: revert-layer; \\75 nicode-bidi: isolate !important; } .button:hover { unicode-bidi: normal; } 2`] = `

Message:
> 1 | .button { ALL: revert-layer; \\75 nicode-bidi: isolate !important; } .button:hover { unicode-bidi: normal; }
    |                                                                                     ^^^^^^^^^^^^^^^^^^^^ \`unicode-bidi\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(13): .button { color: red !important; } .button[data-state~=\"open\"][data-label^=\"a\"] { color: gray; } 1`] = `

  1 | .button { color: red !important; } .button[data-state~="open"][data-label^="a"] { color: gray; }

`;

exports[`invalid(13): .button { color: red !important; } .button[data-state~=\"open\"][data-label^=\"a\"] { color: gray; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button[data-state~="open"][data-label^="a"] { color: gray; }
    |                                                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(13): @SUPPORTS (display: grid) { .button { color: red !important; } } @media screen { @supports (display: grid) { .button { &:hover { color: blue; } } } } 1`] = `

  1 | @SUPPORTS (display: grid) { .button { color: red !important; } } @media screen { @supports (display: grid) { .button { &:hover { color: blue; } } } }

`;

exports[`invalid(13): @SUPPORTS (display: grid) { .button { color: red !important; } } @media screen { @supports (display: grid) { .button { &:hover { color: blue; } } } } 2`] = `

Message:
> 1 | @SUPPORTS (display: grid) { .button { color: red !important; } } @media screen { @supports (display: grid) { .button { &:hover { color: blue; } } } }
    |                                                                                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(14): .button { -webkit-appearance: none !important; } .button:hover { -WEBKIT-APPEARANCE: auto; } 1`] = `

  1 | .button { -webkit-appearance: none !important; } .button:hover { -WEBKIT-APPEARANCE: auto; }

`;

exports[`invalid(14): .button { -webkit-appearance: none !important; } .button:hover { -WEBKIT-APPEARANCE: auto; } 2`] = `

Message:
> 1 | .button { -webkit-appearance: none !important; } .button:hover { -WEBKIT-APPEARANCE: auto; }
    |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^ \`-WEBKIT-APPEARANCE\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(14): .button { all: revert-layer; --color: red !important; --color: revert; } .button:hover { --color: blue; } 1`] = `

  1 | .button { all: revert-layer; --color: red !important; --color: revert; } .button:hover { --color: blue; }

`;

exports[`invalid(14): .button { all: revert-layer; --color: red !important; --color: revert; } .button:hover { --color: blue; } 2`] = `

Message:
> 1 | .button { all: revert-layer; --color: red !important; --color: revert; } .button:hover { --color: blue; }
    |                                                                                          ^^^^^^^^^^^^^ \`--color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(14): [data-role=\"button\"] { color: red !important; } [data-role=\"button\"]:hover { color: blue; } 1`] = `

  1 | [data-role="button"] { color: red !important; } [data-role="button"]:hover { color: blue; }

`;

exports[`invalid(14): [data-role=\"button\"] { color: red !important; } [data-role=\"button\"]:hover { color: blue; } 2`] = `

Message:
> 1 | [data-role="button"] { color: red !important; } [data-role="button"]:hover { color: blue; }
    |                                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(15): * { color: red !important; } *[disabled] { color: gray; } 1`] = `

  1 | * { color: red !important; } *[disabled] { color: gray; }

`;

exports[`invalid(15): * { color: red !important; } *[disabled] { color: gray; } 2`] = `

Message:
> 1 | * { color: red !important; } *[disabled] { color: gray; }
    |                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(15): .button { all: revert; direction: rtl !important; direction: revert-layer; } .button:hover { direction: ltr; } 1`] = `

  1 | .button { all: revert; direction: rtl !important; direction: revert-layer; } .button:hover { direction: ltr; }

`;

exports[`invalid(15): .button { all: revert; direction: rtl !important; direction: revert-layer; } .button:hover { direction: ltr; } 2`] = `

Message:
> 1 | .button { all: revert; direction: rtl !important; direction: revert-layer; } .button:hover { direction: ltr; }
    |                                                                                              ^^^^^^^^^^^^^^ \`direction\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(15): .button { color: red !important; } .button:hover { color: var(--color); } 1`] = `

  1 | .button { color: red !important; } .button:hover { color: var(--color); }

`;

exports[`invalid(15): .button { color: red !important; } .button:hover { color: var(--color); } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:hover { color: var(--color); }
    |                                                    ^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(16): .button { /* base */ color: red /* value */ !important; } .button:hover { color: /* state */ blue; } 1`] = `

  1 | .button { /* base */ color: red /* value */ !important; } .button:hover { color: /* state */ blue; }

`;

exports[`invalid(16): .button { /* base */ color: red /* value */ !important; } .button:hover { color: /* state */ blue; } 2`] = `

Message:
> 1 | .button { /* base */ color: red /* value */ !important; } .button:hover { color: /* state */ blue; }
    |                                                                           ^^^^^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(16): .button[disabled] { color: red !important; } .button[disabled][data-state=\"open\"] { color: gray; } 1`] = `

  1 | .button[disabled] { color: red !important; } .button[disabled][data-state="open"] { color: gray; }

`;

exports[`invalid(16): .button[disabled] { color: red !important; } .button[disabled][data-state=\"open\"] { color: gray; } 2`] = `

Message:
> 1 | .button[disabled] { color: red !important; } .button[disabled][data-state="open"] { color: gray; }
    |                                                                                     ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(17): .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; } 1`] = `

  1 | .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; }

`;

exports[`invalid(17): .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; } 2`] = `

Message:
> 1 | .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; }
    |                                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(17): .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; } 3`] = `

Message:
> 1 | .button { color: red !important; background: white !important; } .button:hover { color: blue; background: black; }
    |                                                                                               ^^^^^^^^^^^^^^^^^ \`background\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(17): .button:hover { color: red !important; } .button:hover[disabled] { color: gray; } 1`] = `

  1 | .button:hover { color: red !important; } .button:hover[disabled] { color: gray; }

`;

exports[`invalid(17): .button:hover { color: red !important; } .button:hover[disabled] { color: gray; } 2`] = `

Message:
> 1 | .button:hover { color: red !important; } .button:hover[disabled] { color: gray; }
    |                                                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(18): .button { color: red !important; } .button.is-disabled { color: gray; } 1`] = `

  1 | .button { color: red !important; } .button.is-disabled { color: gray; }

`;

exports[`invalid(18): .button { color: red !important; } .button.is-disabled { color: gray; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button.is-disabled { color: gray; }
    |                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(18): .button, .link { color: red !important; } .button:hover, .link:focus { color: blue; } 1`] = `

  1 | .button, .link { color: red !important; } .button:hover, .link:focus { color: blue; }

`;

exports[`invalid(18): .button, .link { color: red !important; } .button:hover, .link:focus { color: blue; } 2`] = `

Message:
> 1 | .button, .link { color: red !important; } .button:hover, .link:focus { color: blue; }
    |                                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(19): .button { color: red !important; } .link { color: red !important; } .button:hover, .link:focus { color: blue; } 1`] = `

  1 | .button { color: red !important; } .link { color: red !important; } .button:hover, .link:focus { color: blue; }

`;

exports[`invalid(19): .button { color: red !important; } .link { color: red !important; } .button:hover, .link:focus { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .link { color: red !important; } .button:hover, .link:focus { color: blue; }
    |                                                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(2): .button { color: red !important; } .link { color: red !important; } .button, .link { &:hover { color: blue; } } 1`] = `

  1 | .button { color: red !important; } .link { color: red !important; } .button, .link { &:hover { color: blue; } }

`;

exports[`invalid(2): .button { color: red !important; } .link { color: red !important; } .button, .link { &:hover { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; } .link { color: red !important; } .button, .link { &:hover { color: blue; } }
    |                                                                                                ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(2): .button:hover { color: blue; } .button { color: red !important; } 1`] = `

  1 | .button:hover { color: blue; } .button { color: red !important; }

`;

exports[`invalid(2): .button:hover { color: blue; } .button { color: red !important; } 2`] = `

Message:
> 1 | .button:hover { color: blue; } .button { color: red !important; }
    |                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(2): .button:hover:focus { color: blue; } .button:hover { color: red !important; } 1`] = `

  1 | .button:hover:focus { color: blue; } .button:hover { color: red !important; }

`;

exports[`invalid(2): .button:hover:focus { color: blue; } .button:hover { color: red !important; } 2`] = `

Message:
> 1 | .button:hover:focus { color: blue; } .button:hover { color: red !important; }
    |                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(2): .button[aria-disabled=\"true\"] { color: gray; } .button { color: red !important; } 1`] = `

  1 | .button[aria-disabled="true"] { color: gray; } .button { color: red !important; }

`;

exports[`invalid(2): .button[aria-disabled=\"true\"] { color: gray; } .button { color: red !important; } 2`] = `

Message:
> 1 | .button[aria-disabled="true"] { color: gray; } .button { color: red !important; }
    |                                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(2): .button[data-state=\"open\"] { color: red !important; } .button[data-state=open]:hover { color: blue; } 1`] = `

  1 | .button[data-state="open"] { color: red !important; } .button[data-state=open]:hover { color: blue; }

`;

exports[`invalid(2): .button[data-state=\"open\"] { color: red !important; } .button[data-state=open]:hover { color: blue; } 2`] = `

Message:
> 1 | .button[data-state="open"] { color: red !important; } .button[data-state=open]:hover { color: blue; }
    |                                                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(2): .other { color: revert-layer; } .button { color: red !important; } .button:hover { color: blue; } 1`] = `

  1 | .other { color: revert-layer; } .button { color: red !important; } .button:hover { color: blue; }

`;

exports[`invalid(2): .other { color: revert-layer; } .button { color: red !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .other { color: revert-layer; } .button { color: red !important; } .button:hover { color: blue; }
    |                                                                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(2): :hover.button { color: red !important; } .button:hover:focus { color: blue; } 1`] = `

  1 | :hover.button { color: red !important; } .button:hover:focus { color: blue; }

`;

exports[`invalid(2): :hover.button { color: red !important; } .button:hover:focus { color: blue; } 2`] = `

Message:
> 1 | :hover.button { color: red !important; } .button:hover:focus { color: blue; }
    |                                                                ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(2): @layer components { .button { margin-top: 0 !important; margin: revert; } } .button:hover { margin-top: 1px !important; } 1`] = `

  1 | @layer components { .button { margin-top: 0 !important; margin: revert; } } .button:hover { margin-top: 1px !important; }

`;

exports[`invalid(2): @layer components { .button { margin-top: 0 !important; margin: revert; } } .button:hover { margin-top: 1px !important; } 2`] = `

Message:
> 1 | @layer components { .button { margin-top: 0 !important; margin: revert; } } .button:hover { margin-top: 1px !important; }
    |                                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`margin-top\` cannot override the declaration on line 1 because layered important declarations take precedence over unlayered important declarations.

`;

exports[`invalid(20): .toolbar > .button { color: red !important; } .toolbar > .button:hover { color: blue; } 1`] = `

  1 | .toolbar > .button { color: red !important; } .toolbar > .button:hover { color: blue; }

`;

exports[`invalid(20): .toolbar > .button { color: red !important; } .toolbar > .button:hover { color: blue; } 2`] = `

Message:
> 1 | .toolbar > .button { color: red !important; } .toolbar > .button:hover { color: blue; }
    |                                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(21): .button { color: red !important; &:hover { color: blue; } } 1`] = `

  1 | .button { color: red !important; &:hover { color: blue; } }

`;

exports[`invalid(21): .button { color: red !important; &:hover { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; &:hover { color: blue; } }
    |                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(22): .button { &:hover { color: blue; } color: red !important; } 1`] = `

  1 | .button { &:hover { color: blue; } color: red !important; }

`;

exports[`invalid(22): .button { &:hover { color: blue; } color: red !important; } 2`] = `

Message:
> 1 | .button { &:hover { color: blue; } color: red !important; }
    |                     ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(23): .button { color: red !important; @media (width > 40rem) { color: blue; } } 1`] = `

  1 | .button { color: red !important; @media (width > 40rem) { color: blue; } }

`;

exports[`invalid(23): .button { color: red !important; @media (width > 40rem) { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; @media (width > 40rem) { color: blue; } }
    |                                                           ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(24): .button { color: red !important; @media (width > 40rem) { &:hover { color: blue; } } } 1`] = `

  1 | .button { color: red !important; @media (width > 40rem) { &:hover { color: blue; } } }

`;

exports[`invalid(24): .button { color: red !important; @media (width > 40rem) { &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .button { color: red !important; @media (width > 40rem) { &:hover { color: blue; } } }
    |                                                                     ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(25): .toolbar { .button { color: red !important; &:hover { color: blue; } } } 1`] = `

  1 | .toolbar { .button { color: red !important; &:hover { color: blue; } } }

`;

exports[`invalid(25): .toolbar { .button { color: red !important; &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .toolbar { .button { color: red !important; &:hover { color: blue; } } }
    |                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(26): .button { color: red !important; } @media (width > 40rem) { .button { color: blue; } } 1`] = `

  1 | .button { color: red !important; } @media (width > 40rem) { .button { color: blue; } }

`;

exports[`invalid(26): .button { color: red !important; } @media (width > 40rem) { .button { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; } @media (width > 40rem) { .button { color: blue; } }
    |                                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(27): @media (width > 40rem) { .button { color: blue; } } .button { color: red !important; } 1`] = `

  1 | @media (width > 40rem) { .button { color: blue; } } .button { color: red !important; }

`;

exports[`invalid(27): @media (width > 40rem) { .button { color: blue; } } .button { color: red !important; } 2`] = `

Message:
> 1 | @media (width > 40rem) { .button { color: blue; } } .button { color: red !important; }
    |                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(28): @media print { .button { color: red !important; } } @media print { .button:hover { color: blue; } } 1`] = `

  1 | @media print { .button { color: red !important; } } @media print { .button:hover { color: blue; } }

`;

exports[`invalid(28): @media print { .button { color: red !important; } } @media print { .button:hover { color: blue; } } 2`] = `

Message:
> 1 | @media print { .button { color: red !important; } } @media print { .button:hover { color: blue; } }
    |                                                                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(29): @media print { .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } } 1`] = `

  1 | @media print { .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } }

`;

exports[`invalid(29): @media print { .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } } 2`] = `

Message:
> 1 | @media print { .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } }
    |                                                                                         ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(3): .button { color: red !important; margin: revert !important; } .button:hover { color: blue; } 1`] = `

  1 | .button { color: red !important; margin: revert !important; } .button:hover { color: blue; }

`;

exports[`invalid(3): .button { color: red !important; margin: revert !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; margin: revert !important; } .button:hover { color: blue; }
    |                                                                               ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(3): .button { color: red !important; } .button:disabled { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:disabled { color: blue; }

`;

exports[`invalid(3): .button { color: red !important; } .button:disabled { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:disabled { color: blue; }
    |                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(3): .button { color: red !important; } .button:hover { color: revert-layer; } 1`] = `

  1 | .button { color: red !important; } .button:hover { color: revert-layer; }

`;

exports[`invalid(3): .button { color: red !important; } .button:hover { color: revert-layer; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:hover { color: revert-layer; }
    |                                                    ^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(3): .button { color: red !important; } .button[data-state=\"open\"]:hover { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button[data-state="open"]:hover { color: blue; }

`;

exports[`invalid(3): .button { color: red !important; } .button[data-state=\"open\"]:hover { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button[data-state="open"]:hover { color: blue; }
    |                                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(3): .button, #link { color: red !important; &:hover { color: blue; } } 1`] = `

  1 | .button, #link { color: red !important; &:hover { color: blue; } }

`;

exports[`invalid(3): .button, #link { color: red !important; &:hover { color: blue; } } 2`] = `

Message:
> 1 | .button, #link { color: red !important; &:hover { color: blue; } }
    |                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(3): .button:hover { color: red !important; &:focus { color: blue; } } 1`] = `

  1 | .button:hover { color: red !important; &:focus { color: blue; } }

`;

exports[`invalid(3): .button:hover { color: red !important; &:focus { color: blue; } } 2`] = `

Message:
> 1 | .button:hover { color: red !important; &:focus { color: blue; } }
    |                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(3): .button:hover:focus { color: red !important; } .button:focus:hover:active { color: blue; } 1`] = `

  1 | .button:hover:focus { color: red !important; } .button:focus:hover:active { color: blue; }

`;

exports[`invalid(3): .button:hover:focus { color: red !important; } .button:focus:hover:active { color: blue; } 2`] = `

Message:
> 1 | .button:hover:focus { color: red !important; } .button:focus:hover:active { color: blue; }
    |                                                                             ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(3): .button[data-state=\\6f pen] { color: red !important; } .button[data-state=\"open\"]:hover { color: blue; } 1`] = `

  1 | .button[data-state=\\6f pen] { color: red !important; } .button[data-state="open"]:hover { color: blue; }

`;

exports[`invalid(3): .button[data-state=\\6f pen] { color: red !important; } .button[data-state=\"open\"]:hover { color: blue; } 2`] = `

Message:
> 1 | .button[data-state=\\6f pen] { color: red !important; } .button[data-state="open"]:hover { color: blue; }
    |                                                                                           ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(30): .button { color: red !important; } @container (width > 40rem) { .button { color: blue; } } 1`] = `

  1 | .button { color: red !important; } @container (width > 40rem) { .button { color: blue; } }

`;

exports[`invalid(30): .button { color: red !important; } @container (width > 40rem) { .button { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; } @container (width > 40rem) { .button { color: blue; } }
    |                                                                           ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(31): .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } 1`] = `

  1 | .button { color: red !important; } @supports (display: grid) { .button { color: blue; } }

`;

exports[`invalid(31): .button { color: red !important; } @supports (display: grid) { .button { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; } @supports (display: grid) { .button { color: blue; } }
    |                                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(32): .button { color: red; } @layer state { .button:hover { color: blue; } } 1`] = `

  1 | .button { color: red; } @layer state { .button:hover { color: blue; } }

`;

exports[`invalid(32): .button { color: red; } @layer state { .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red; } @layer state { .button:hover { color: blue; } }
    |                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(33): @layer state { .button:hover { color: blue; } } .button { color: red; } 1`] = `

  1 | @layer state { .button:hover { color: blue; } } .button { color: red; }

`;

exports[`invalid(33): @layer state { .button:hover { color: blue; } } .button { color: red; } 2`] = `

Message:
> 1 | @layer state { .button:hover { color: blue; } } .button { color: red; }
    |                                ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(34): .button { color: red; } @layer state { .button { color: blue; } } 1`] = `

  1 | .button { color: red; } @layer state { .button { color: blue; } }

`;

exports[`invalid(34): .button { color: red; } @layer state { .button { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red; } @layer state { .button { color: blue; } }
    |                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(35): .button { color: red; @layer state { &:hover { color: blue; } } } 1`] = `

  1 | .button { color: red; @layer state { &:hover { color: blue; } } }

`;

exports[`invalid(35): .button { color: red; @layer state { &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .button { color: red; @layer state { &:hover { color: blue; } } }
    |                                                ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(36): @layer base { .button { color: red !important; } } .button:hover { color: blue !important; } 1`] = `

  1 | @layer base { .button { color: red !important; } } .button:hover { color: blue !important; }

`;

exports[`invalid(36): @layer base { .button { color: red !important; } } .button:hover { color: blue !important; } 2`] = `

Message:
> 1 | @layer base { .button { color: red !important; } } .button:hover { color: blue !important; }
    |                                                                    ^^^^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because layered important declarations take precedence over unlayered important declarations.

`;

exports[`invalid(37): @layer base { .button { color: red !important; } } @layer state { .button:hover { color: blue; } } 1`] = `

  1 | @layer base { .button { color: red !important; } } @layer state { .button:hover { color: blue; } }

`;

exports[`invalid(37): @layer base { .button { color: red !important; } } @layer state { .button:hover { color: blue; } } 2`] = `

Message:
> 1 | @layer base { .button { color: red !important; } } @layer state { .button:hover { color: blue; } }
    |                                                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(38): @layer { .button { color: red !important; } .button:hover { color: blue; } } 1`] = `

  1 | @layer { .button { color: red !important; } .button:hover { color: blue; } }

`;

exports[`invalid(38): @layer { .button { color: red !important; } .button:hover { color: blue; } } 2`] = `

Message:
> 1 | @layer { .button { color: red !important; } .button:hover { color: blue; } }
    |                                                             ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(39): .button { color: inherit !important; } .button:hover { color: blue; } 1`] = `

  1 | .button { color: inherit !important; } .button:hover { color: blue; }

`;

exports[`invalid(39): .button { color: inherit !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .button { color: inherit !important; } .button:hover { color: blue; }
    |                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(4): .button { --margin-top: 0 !important; margin: revert !important; } .button:hover { --margin-top: 1px; } 1`] = `

  1 | .button { --margin-top: 0 !important; margin: revert !important; } .button:hover { --margin-top: 1px; }

`;

exports[`invalid(4): .button { --margin-top: 0 !important; margin: revert !important; } .button:hover { --margin-top: 1px; } 2`] = `

Message:
> 1 | .button { --margin-top: 0 !important; margin: revert !important; } .button:hover { --margin-top: 1px; }
    |                                                                                    ^^^^^^^^^^^^^^^^^ \`--margin-top\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(4): .button { all: revert-layer; color: red !important; } .button:hover { color: blue; } 1`] = `

  1 | .button { all: revert-layer; color: red !important; } .button:hover { color: blue; }

`;

exports[`invalid(4): .button { all: revert-layer; color: red !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .button { all: revert-layer; color: red !important; } .button:hover { color: blue; }
    |                                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(4): .button { color: red !important; } .button:focus-visible { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:focus-visible { color: blue; }

`;

exports[`invalid(4): .button { color: red !important; } .button:focus-visible { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:focus-visible { color: blue; }
    |                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(4): .button { color: red !important; } .button:hover[data-state=\"open\"] { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:hover[data-state="open"] { color: blue; }

`;

exports[`invalid(4): .button { color: red !important; } .button:hover[data-state=\"open\"] { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:hover[data-state="open"] { color: blue; }
    |                                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(4): .button, .link { color: red !important; &:hover { &:focus { color: blue; } } } 1`] = `

  1 | .button, .link { color: red !important; &:hover { &:focus { color: blue; } } }

`;

exports[`invalid(4): .button, .link { color: red !important; &:hover { &:focus { color: blue; } } } 2`] = `

Message:
> 1 | .button, .link { color: red !important; &:hover { &:focus { color: blue; } } }
    |                                                             ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(4): .button[data-state=\"\\6f pen\"] { color: red !important; } .button[data-state=open]:hover { color: blue; } 1`] = `

  1 | .button[data-state="\\6f pen"] { color: red !important; } .button[data-state=open]:hover { color: blue; }

`;

exports[`invalid(4): .button[data-state=\"\\6f pen\"] { color: red !important; } .button[data-state=open]:hover { color: blue; } 2`] = `

Message:
> 1 | .button[data-state="\\6f pen"] { color: red !important; } .button[data-state=open]:hover { color: blue; }
    |                                                                                           ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(4): .button[disabled] { color: red !important; } [disabled].button.active { color: gray; } 1`] = `

  1 | .button[disabled] { color: red !important; } [disabled].button.active { color: gray; }

`;

exports[`invalid(4): .button[disabled] { color: red !important; } [disabled].button.active { color: gray; } 2`] = `

Message:
> 1 | .button[disabled] { color: red !important; } [disabled].button.active { color: gray; }
    |                                                                         ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(4): .toolbar:hover > .button { color: red !important; &.is-disabled { color: gray; } } 1`] = `

  1 | .toolbar:hover > .button { color: red !important; &.is-disabled { color: gray; } }

`;

exports[`invalid(4): .toolbar:hover > .button { color: red !important; &.is-disabled { color: gray; } } 2`] = `

Message:
> 1 | .toolbar:hover > .button { color: red !important; &.is-disabled { color: gray; } }
    |                                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(40): .button { color: initial !important; } .button:hover { color: blue; } 1`] = `

  1 | .button { color: initial !important; } .button:hover { color: blue; }

`;

exports[`invalid(40): .button { color: initial !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .button { color: initial !important; } .button:hover { color: blue; }
    |                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(41): .button { color: oklch(60% 0.2 30) !important; } .button:hover { color: red; } 1`] = `

  1 | .button { color: oklch(60% 0.2 30) !important; } .button:hover { color: red; }

`;

exports[`invalid(41): .button { color: oklch(60% 0.2 30) !important; } .button:hover { color: red; } 2`] = `

Message:
> 1 | .button { color: oklch(60% 0.2 30) !important; } .button:hover { color: red; }
    |                                                                  ^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(42): .button { color: red !important; }\r\n.button:hover { color: blue; } 1`] = `

  1 | .button { color: red !important; }
  2 | .button:hover { color: blue; }

`;

exports[`invalid(42): .button { color: red !important; }\r\n.button:hover { color: blue; } 2`] = `

Message:
  1 | .button { color: red !important; }
> 2 | .button:hover { color: blue; }
    |                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(43): .toolbar > .button { color: red !important; } .toolbar { > .button:hover { color: blue; } } 1`] = `

  1 | .toolbar > .button { color: red !important; } .toolbar { > .button:hover { color: blue; } }

`;

exports[`invalid(43): .toolbar > .button { color: red !important; } .toolbar { > .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .toolbar > .button { color: red !important; } .toolbar { > .button:hover { color: blue; } }
    |                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(44): .toolbar { > .button { color: red !important; } } .toolbar > .button:hover { color: blue; } 1`] = `

  1 | .toolbar { > .button { color: red !important; } } .toolbar > .button:hover { color: blue; }

`;

exports[`invalid(44): .toolbar { > .button { color: red !important; } } .toolbar > .button:hover { color: blue; } 2`] = `

Message:
> 1 | .toolbar { > .button { color: red !important; } } .toolbar > .button:hover { color: blue; }
    |                                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(45): .toolbar + .button { color: red !important; } .toolbar { + .button:hover { color: blue; } } 1`] = `

  1 | .toolbar + .button { color: red !important; } .toolbar { + .button:hover { color: blue; } }

`;

exports[`invalid(45): .toolbar + .button { color: red !important; } .toolbar { + .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .toolbar + .button { color: red !important; } .toolbar { + .button:hover { color: blue; } }
    |                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(46): .toolbar ~ .button { color: red !important; } .toolbar { ~ .button:hover { color: blue; } } 1`] = `

  1 | .toolbar ~ .button { color: red !important; } .toolbar { ~ .button:hover { color: blue; } }

`;

exports[`invalid(46): .toolbar ~ .button { color: red !important; } .toolbar { ~ .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .toolbar ~ .button { color: red !important; } .toolbar { ~ .button:hover { color: blue; } }
    |                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(47): .button { --color: \"var(--base)\" !important; } .button:hover { --color: blue; } 1`] = `

  1 | .button { --color: "var(--base)" !important; } .button:hover { --color: blue; }

`;

exports[`invalid(47): .button { --color: \"var(--base)\" !important; } .button:hover { --color: blue; } 2`] = `

Message:
> 1 | .button { --color: "var(--base)" !important; } .button:hover { --color: blue; }
    |                                                                ^^^^^^^^^^^^^ \`--color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(48): .button { --\\63 olor: red !important; } .button:hover { --color: blue; } 1`] = `

  1 | .button { --\\63 olor: red !important; } .button:hover { --color: blue; }

`;

exports[`invalid(48): .button { --\\63 olor: red !important; } .button:hover { --color: blue; } 2`] = `

Message:
> 1 | .button { --\\63 olor: red !important; } .button:hover { --color: blue; }
    |                                                         ^^^^^^^^^^^^^ \`--color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(49): .toolbar:IS(.active) > .button { color: red !important; } .toolbar:is(.active) > .button:hover { color: blue; } 1`] = `

  1 | .toolbar:IS(.active) > .button { color: red !important; } .toolbar:is(.active) > .button:hover { color: blue; }

`;

exports[`invalid(49): .toolbar:IS(.active) > .button { color: red !important; } .toolbar:is(.active) > .button:hover { color: blue; } 2`] = `

Message:
> 1 | .toolbar:IS(.active) > .button { color: red !important; } .toolbar:is(.active) > .button:hover { color: blue; }
    |                                                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(5): .button { color: red !important; } .button:hover { all: revert; color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:hover { all: revert; color: blue; }

`;

exports[`invalid(5): .button { color: red !important; } .button:hover { all: revert; color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:hover { all: revert; color: blue; }
    |                                                                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(5): .button { color: red !important; } .button:not(:disabled):hover { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:not(:disabled):hover { color: blue; }

`;

exports[`invalid(5): .button { color: red !important; } .button:not(:disabled):hover { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:not(:disabled):hover { color: blue; }
    |                                                                   ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(5): .button { color: red !important; } .button[disabled][data-state=\"open\"] { color: gray; } 1`] = `

  1 | .button { color: red !important; } .button[disabled][data-state="open"] { color: gray; }

`;

exports[`invalid(5): .button { color: red !important; } .button[disabled][data-state=\"open\"] { color: gray; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button[disabled][data-state="open"] { color: gray; }
    |                                                                           ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(5): .button.active { color: red !important; } .button[disabled].active:hover { color: gray; } 1`] = `

  1 | .button.active { color: red !important; } .button[disabled].active:hover { color: gray; }

`;

exports[`invalid(5): .button.active { color: red !important; } .button[disabled].active:hover { color: gray; } 2`] = `

Message:
> 1 | .button.active { color: red !important; } .button[disabled].active:hover { color: gray; }
    |                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(5): .button:not(.active) { color: red !important; } .button:not(.active):hover { color: blue; } 1`] = `

  1 | .button:not(.active) { color: red !important; } .button:not(.active):hover { color: blue; }

`;

exports[`invalid(5): .button:not(.active) { color: red !important; } .button:not(.active):hover { color: blue; } 2`] = `

Message:
> 1 | .button:not(.active) { color: red !important; } .button:not(.active):hover { color: blue; }
    |                                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(5): .toolbar, .menu { .button { color: red !important; &:hover { color: blue; } } } 1`] = `

  1 | .toolbar, .menu { .button { color: red !important; &:hover { color: blue; } } }

`;

exports[`invalid(5): .toolbar, .menu { .button { color: red !important; &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .toolbar, .menu { .button { color: red !important; &:hover { color: blue; } } }
    |                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(5): [data-state=open] .button { color: red !important; } [data-state=\"open\"] .button:hover { color: blue; } 1`] = `

  1 | [data-state=open] .button { color: red !important; } [data-state="open"] .button:hover { color: blue; }

`;

exports[`invalid(5): [data-state=open] .button { color: red !important; } [data-state=\"open\"] .button:hover { color: blue; } 2`] = `

Message:
> 1 | [data-state=open] .button { color: red !important; } [data-state="open"] .button:hover { color: blue; }
    |                                                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(50): .button {\n\tcolor: red !important;\n}\n.button:hover {\n\tcolor: blue;\n} 1`] = `

  1 | .button {
  2 | 	color: red !important;
  3 | }
  4 | .button:hover {
  5 | 	color: blue;
  6 | }

`;

exports[`invalid(50): .button {\n\tcolor: red !important;\n}\n.button:hover {\n\tcolor: blue;\n} 2`] = `

Message:
  1 | .button {
  2 | 	color: red !important;
  3 | }
  4 | .button:hover {
> 5 | 	color: blue;
    | 	^^^^^^^^^^^ \`color\` cannot override the declaration on line 2 because it is marked \`!important\`.
  6 | }

`;

exports[`invalid(51): .button { @media print { color: red !important; } } @media print { .button:hover { color: blue; } } 1`] = `

  1 | .button { @media print { color: red !important; } } @media print { .button:hover { color: blue; } }

`;

exports[`invalid(51): .button { @media print { color: red !important; } } @media print { .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .button { @media print { color: red !important; } } @media print { .button:hover { color: blue; } }
    |                                                                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(52): .button { future-property: 1px !important; } .button:hover { future-property: 2px; } 1`] = `

  1 | .button { future-property: 1px !important; } .button:hover { future-property: 2px; }

`;

exports[`invalid(52): .button { future-property: 1px !important; } .button:hover { future-property: 2px; } 2`] = `

Message:
> 1 | .button { future-property: 1px !important; } .button:hover { future-property: 2px; }
    |                                                              ^^^^^^^^^^^^^^^^^^^^ \`future-property\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(53): .button { color: red !important; }\n.link { color: red; }\n@layer states { .button:hover, .link:focus { color: blue; } } 1`] = `

  1 | .button { color: red !important; }
  2 | .link { color: red; }
  3 | @layer states { .button:hover, .link:focus { color: blue; } }

`;

exports[`invalid(53): .button { color: red !important; }\n.link { color: red; }\n@layer states { .button:hover, .link:focus { color: blue; } } 2`] = `

Message:
  1 | .button { color: red !important; }
  2 | .link { color: red; }
> 3 | @layer states { .button:hover, .link:focus { color: blue; } }
    |                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 2 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(54): .button { margin: revert-layer; color: red !important; } .button:hover { color: blue; } 1`] = `

  1 | .button { margin: revert-layer; color: red !important; } .button:hover { color: blue; }

`;

exports[`invalid(54): .button { margin: revert-layer; color: red !important; } .button:hover { color: blue; } 2`] = `

Message:
> 1 | .button { margin: revert-layer; color: red !important; } .button:hover { color: blue; }
    |                                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(55): .button { --Color: revert-layer; --color: red !important; } .button:hover { --color: blue; } 1`] = `

  1 | .button { --Color: revert-layer; --color: red !important; } .button:hover { --color: blue; }

`;

exports[`invalid(55): .button { --Color: revert-layer; --color: red !important; } .button:hover { --color: blue; } 2`] = `

Message:
> 1 | .button { --Color: revert-layer; --color: red !important; } .button:hover { --color: blue; }
    |                                                                             ^^^^^^^^^^^^^ \`--color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(56): .button:hover { color: red !important; } .button:hover:focus { color: blue; } 1`] = `

  1 | .button:hover { color: red !important; } .button:hover:focus { color: blue; }

`;

exports[`invalid(56): .button:hover { color: red !important; } .button:hover:focus { color: blue; } 2`] = `

Message:
> 1 | .button:hover { color: red !important; } .button:hover:focus { color: blue; }
    |                                                                ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(57): @supports (display: grid) { .button { color: red !important; } } @media print { @supports (display: grid) { .button:hover { color: blue; } } } 1`] = `

  1 | @supports (display: grid) { .button { color: red !important; } } @media print { @supports (display: grid) { .button:hover { color: blue; } } }

`;

exports[`invalid(57): @supports (display: grid) { .button { color: red !important; } } @media print { @supports (display: grid) { .button:hover { color: blue; } } } 2`] = `

Message:
> 1 | @supports (display: grid) { .button { color: red !important; } } @media print { @supports (display: grid) { .button:hover { color: blue; } } }
    |                                                                                                                             ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(6): .button { --theme: red !important; } .button:hover { --theme: /* rollback */ revert-layer; } 1`] = `

  1 | .button { --theme: red !important; } .button:hover { --theme: /* rollback */ revert-layer; }

`;

exports[`invalid(6): .button { --theme: red !important; } .button:hover { --theme: /* rollback */ revert-layer; } 2`] = `

Message:
> 1 | .button { --theme: red !important; } .button:hover { --theme: /* rollback */ revert-layer; }
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`--theme\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(6): .button { color: red !important; } .button:has(.icon) { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:has(.icon) { color: blue; }

`;

exports[`invalid(6): .button { color: red !important; } .button:has(.icon) { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:has(.icon) { color: blue; }
    |                                                         ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(6): .button { color: red; } @layer state { .button.is-disabled { color: gray; } } 1`] = `

  1 | .button { color: red; } @layer state { .button.is-disabled { color: gray; } }

`;

exports[`invalid(6): .button { color: red; } @layer state { .button.is-disabled { color: gray; } } 2`] = `

Message:
> 1 | .button { color: red; } @layer state { .button.is-disabled { color: gray; } }
    |                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(6): .button[data-state=open i] { color: red !important; } .button[data-state=\"open\" i]:hover { color: blue; } 1`] = `

  1 | .button[data-state=open i] { color: red !important; } .button[data-state="open" i]:hover { color: blue; }

`;

exports[`invalid(6): .button[data-state=open i] { color: red !important; } .button[data-state=\"open\" i]:hover { color: blue; } 2`] = `

Message:
> 1 | .button[data-state=open i] { color: red !important; } .button[data-state="open" i]:hover { color: blue; }
    |                                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(6): .button[type=\"submit\"] { color: red !important; } .button[type=\"submit\"]:hover { color: blue; } 1`] = `

  1 | .button[type="submit"] { color: red !important; } .button[type="submit"]:hover { color: blue; }

`;

exports[`invalid(6): .button[type=\"submit\"] { color: red !important; } .button[type=\"submit\"]:hover { color: blue; } 2`] = `

Message:
> 1 | .button[type="submit"] { color: red !important; } .button[type="submit"]:hover { color: blue; }
    |                                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(6): .toolbar > .button, .menu > .button { color: red !important; } .toolbar, .menu { > .button:hover { color: blue; } } 1`] = `

  1 | .toolbar > .button, .menu > .button { color: red !important; } .toolbar, .menu { > .button:hover { color: blue; } }

`;

exports[`invalid(6): .toolbar > .button, .menu > .button { color: red !important; } .toolbar, .menu { > .button:hover { color: blue; } } 2`] = `

Message:
> 1 | .toolbar > .button, .menu > .button { color: red !important; } .toolbar, .menu { > .button:hover { color: blue; } }
    |                                                                                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(6): .toolbar > .button.active { color: red !important; } .toolbar > .active.button:hover { color: blue; } 1`] = `

  1 | .toolbar > .button.active { color: red !important; } .toolbar > .active.button:hover { color: blue; }

`;

exports[`invalid(6): .toolbar > .button.active { color: red !important; } .toolbar > .active.button:hover { color: blue; } 2`] = `

Message:
> 1 | .toolbar > .button.active { color: red !important; } .toolbar > .active.button:hover { color: blue; }
    |                                                                                        ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(7): .button { all: revert !important; --theme: red !important; } .button:hover { --theme: revert-layer; } 1`] = `

  1 | .button { all: revert !important; --theme: red !important; } .button:hover { --theme: revert-layer; }

`;

exports[`invalid(7): .button { all: revert !important; --theme: red !important; } .button:hover { --theme: revert-layer; } 2`] = `

Message:
> 1 | .button { all: revert !important; --theme: red !important; } .button:hover { --theme: revert-layer; }
    |                                                                              ^^^^^^^^^^^^^^^^^^^^^ \`--theme\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(7): .button { color: red !important; } .button:is(:hover, :focus) { color: blue; } 1`] = `

  1 | .button { color: red !important; } .button:is(:hover, :focus) { color: blue; }

`;

exports[`invalid(7): .button { color: red !important; } .button:is(:hover, :focus) { color: blue; } 2`] = `

Message:
> 1 | .button { color: red !important; } .button:is(:hover, :focus) { color: blue; }
    |                                                                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(7): .button[data-state~=open] { color: red !important; } .button[data-state~=\"open\"]:hover { color: blue; } 1`] = `

  1 | .button[data-state~=open] { color: red !important; } .button[data-state~="open"]:hover { color: blue; }

`;

exports[`invalid(7): .button[data-state~=open] { color: red !important; } .button[data-state~=\"open\"]:hover { color: blue; } 2`] = `

Message:
> 1 | .button[data-state~=open] { color: red !important; } .button[data-state~="open"]:hover { color: blue; }
    |                                                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(7): .toolbar { .button, .link { color: red !important; &:hover { color: blue; } } } 1`] = `

  1 | .toolbar { .button, .link { color: red !important; &:hover { color: blue; } } }

`;

exports[`invalid(7): .toolbar { .button, .link { color: red !important; &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .toolbar { .button, .link { color: red !important; &:hover { color: blue; } } }
    |                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(7): .toolbar[hidden] > .button { color: red !important; } .toolbar[hidden] > .button[disabled] { color: gray; } 1`] = `

  1 | .toolbar[hidden] > .button { color: red !important; } .toolbar[hidden] > .button[disabled] { color: gray; }

`;

exports[`invalid(7): .toolbar[hidden] > .button { color: red !important; } .toolbar[hidden] > .button[disabled] { color: gray; } 2`] = `

Message:
> 1 | .toolbar[hidden] > .button { color: red !important; } .toolbar[hidden] > .button[disabled] { color: gray; }
    |                                                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(7): @layer base { .button:hover { color: red !important; } } .button:hover.active { color: blue !important; } 1`] = `

  1 | @layer base { .button:hover { color: red !important; } } .button:hover.active { color: blue !important; }

`;

exports[`invalid(7): @layer base { .button:hover { color: red !important; } } .button:hover.active { color: blue !important; } 2`] = `

Message:
> 1 | @layer base { .button:hover { color: red !important; } } .button:hover.active { color: blue !important; }
    |                                                                                 ^^^^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because layered important declarations take precedence over unlayered important declarations.

`;

exports[`invalid(7): button#submit.active { color: red !important; } button.active#submit:hover { color: blue; } 1`] = `

  1 | button#submit.active { color: red !important; } button.active#submit:hover { color: blue; }

`;

exports[`invalid(7): button#submit.active { color: red !important; } button.active#submit:hover { color: blue; } 2`] = `

Message:
> 1 | button#submit.active { color: red !important; } button.active#submit:hover { color: blue; }
    |                                                                              ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(8): .button { COLOR: red !important; } .button:HOVER { color: blue; } 1`] = `

  1 | .button { COLOR: red !important; } .button:HOVER { color: blue; }

`;

exports[`invalid(8): .button { COLOR: red !important; } .button:HOVER { color: blue; } 2`] = `

Message:
> 1 | .button { COLOR: red !important; } .button:HOVER { color: blue; }
    |                                                    ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(8): .button { color: red !important; &:hover, &:focus { color: blue; } } 1`] = `

  1 | .button { color: red !important; &:hover, &:focus { color: blue; } }

`;

exports[`invalid(8): .button { color: red !important; &:hover, &:focus { color: blue; } } 2`] = `

Message:
> 1 | .button { color: red !important; &:hover, &:focus { color: blue; } }
    |                                                     ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(8): .button { color: red !important; &[aria-disabled=\"true\"] { color: gray; } } 1`] = `

  1 | .button { color: red !important; &[aria-disabled="true"] { color: gray; } }

`;

exports[`invalid(8): .button { color: red !important; &[aria-disabled=\"true\"] { color: gray; } } 2`] = `

Message:
> 1 | .button { color: red !important; &[aria-disabled="true"] { color: gray; } }
    |                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(8): .button.active { color: red !important; } @media print { .active.button { color: blue; } } 1`] = `

  1 | .button.active { color: red !important; } @media print { .active.button { color: blue; } }

`;

exports[`invalid(8): .button.active { color: red !important; } @media print { .active.button { color: blue; } } 2`] = `

Message:
> 1 | .button.active { color: red !important; } @media print { .active.button { color: blue; } }
    |                                                                           ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(8): .button:\\68 over { COLOR: red !important; } .button:hover.\\61 ctive { color: blue; } 1`] = `

  1 | .button:\\68 over { COLOR: red !important; } .button:hover.\\61 ctive { color: blue; }

`;

exports[`invalid(8): .button:\\68 over { COLOR: red !important; } .button:hover.\\61 ctive { color: blue; } 2`] = `

Message:
> 1 | .button:\\68 over { COLOR: red !important; } .button:hover.\\61 ctive { color: blue; }
    |                                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(8): .button[data-state=\"open\"] { color: red !important; } .button[data-state=open] { &:hover { color: blue; } } 1`] = `

  1 | .button[data-state="open"] { color: red !important; } .button[data-state=open] { &:hover { color: blue; } }

`;

exports[`invalid(8): .button[data-state=\"open\"] { color: red !important; } .button[data-state=open] { &:hover { color: blue; } } 2`] = `

Message:
> 1 | .button[data-state="open"] { color: red !important; } .button[data-state=open] { &:hover { color: blue; } }
    |                                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(8): @layer components { .button { color: red !important; } } .other { color: revert; } .button:hover { color: blue !important; } 1`] = `

  1 | @layer components { .button { color: red !important; } } .other { color: revert; } .button:hover { color: blue !important; }

`;

exports[`invalid(8): @layer components { .button { color: red !important; } } .other { color: revert; } .button:hover { color: blue !important; } 2`] = `

Message:
> 1 | @layer components { .button { color: red !important; } } .other { color: revert; } .button:hover { color: blue !important; }
    |                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because layered important declarations take precedence over unlayered important declarations.

`;

exports[`invalid(9): .button { \\63 olor: red !important; } .button:\\68 over { color: blue; } 1`] = `

  1 | .button { \\63 olor: red !important; } .button:\\68 over { color: blue; }

`;

exports[`invalid(9): .button { \\63 olor: red !important; } .button:\\68 over { color: blue; } 2`] = `

Message:
> 1 | .button { \\63 olor: red !important; } .button:\\68 over { color: blue; }
    |                                                          ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(9): .button { color: red; } @layer state { .button[disabled] { color: gray; } } 1`] = `

  1 | .button { color: red; } @layer state { .button[disabled] { color: gray; } }

`;

exports[`invalid(9): .button { color: red; } @layer state { .button[disabled] { color: gray; } } 2`] = `

Message:
> 1 | .button { color: red; } @layer state { .button[disabled] { color: gray; } }
    |                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(9): .button, .link { @media print { color: red !important; &:hover { color: blue; } } } 1`] = `

  1 | .button, .link { @media print { color: red !important; &:hover { color: blue; } } }

`;

exports[`invalid(9): .button, .link { @media print { color: red !important; &:hover { color: blue; } } } 2`] = `

Message:
> 1 | .button, .link { @media print { color: red !important; &:hover { color: blue; } } }
    |                                                                  ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(9): .button.active { color: red; } @layer states { .active.button { color: blue; } } 1`] = `

  1 | .button.active { color: red; } @layer states { .active.button { color: blue; } }

`;

exports[`invalid(9): .button.active { color: red; } @layer states { .active.button { color: blue; } } 2`] = `

Message:
> 1 | .button.active { color: red; } @layer states { .active.button { color: blue; } }
    |                                                                 ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(9): .button:hover { /* base */ color: red !important; } .button:hover/* state */:focus { color: blue; } 1`] = `

  1 | .button:hover { /* base */ color: red !important; } .button:hover/* state */:focus { color: blue; }

`;

exports[`invalid(9): .button:hover { /* base */ color: red !important; } .button:hover/* state */:focus { color: blue; } 2`] = `

Message:
> 1 | .button:hover { /* base */ color: red !important; } .button:hover/* state */:focus { color: blue; }
    |                                                                                      ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;

exports[`invalid(9): .button[data-state=open] { color: red; } @layer states { .button[data-state=\"open\"] { color: blue; } } 1`] = `

  1 | .button[data-state=open] { color: red; } @layer states { .button[data-state="open"] { color: blue; } }

`;

exports[`invalid(9): .button[data-state=open] { color: red; } @layer states { .button[data-state=\"open\"] { color: blue; } } 2`] = `

Message:
> 1 | .button[data-state=open] { color: red; } @layer states { .button[data-state="open"] { color: blue; } }
    |                                                                                       ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because unlayered normal declarations take precedence over layered declarations.

`;

exports[`invalid(9): @media screen { .button { color: red !important; } } @supports (display: grid) { @media screen { .button { color: blue; } } } 1`] = `

  1 | @media screen { .button { color: red !important; } } @supports (display: grid) { @media screen { .button { color: blue; } } }

`;

exports[`invalid(9): @media screen { .button { color: red !important; } } @supports (display: grid) { @media screen { .button { color: blue; } } } 2`] = `

Message:
> 1 | @media screen { .button { color: red !important; } } @supports (display: grid) { @media screen { .button { color: blue; } } }
    |                                                                                                            ^^^^^^^^^^^ \`color\` cannot override the declaration on line 1 because it is marked \`!important\`.

`;
